k8s/productpage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-productpage
  namespace: student17-bookinfo-dev
  labels:
    app: bookinfo-dev-productpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-productpage
  template:
    metadata:
      labels:
        app: bookinfo-dev-productpage
    spec:
      containers:
      - name: bookinfo-dev-productpage
        image: ghcr.io/famedirtyshit/bookinfo-productpage:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web-port
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
      imagePullSecrets:
      - name: registry-bookinfo
